--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terapias Holísticas - 30+ Anos de Experiência em Bem-Estar</title>
+    <title>Oséias Mendes</title>
     <meta name="description" content="Transforme sua vida com terapias holísticas personalizadas. Mais de 30 anos de experiência em iridologia, análise do estilo de vida e cura natural. Agende agora!" />
     <meta name="author" content="Terapeuta Holístico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Terapias Holísticas - 30+ Anos Transformando Vidas" />
+    <meta property="og:title" content="Oséias Mendes - Terapias Holísticas - 30+ Anos Transformando Vidas" />
     <meta property="og:description" content="Descubra o equilíbrio emocional e físico através de terapias holísticas personalizadas. Iridologia, análise do estilo de vida e atendimento humanizado." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="/public/logo.ico" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
